--- a/php/.htaccess
+++ b/php/.htaccess
@@ -5,7 +5,7 @@ RewriteRule ^([^\.]+)$ $1.php [NC,L]
 
 # Set the headers for the restful api
 <IfModule mod_headers.c>
-    Header set Access-Control-Allow-Origin "http://localhost:4200"
+    Header set Access-Control-Allow-Origin "https://backofficecheck.com.br/"
     Header always set Access-Control-Max-Age "1000"
     Header always set Access-Control-Allow-Headers "X-Requested-With, Content-Type, Origin, Authorization, Accept, Client-Security-Token, Accept-Encoding"
     Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
